# analyse-westerns

./: .env.example  .gitignore  Makefile  README.md  analyzer.py  docker-compose.yml  pyproject.toml
db_init/: init_db.sql
