[project]
name = "analyse-westerns"
version = "0.1.0"
description = "Western Movies Analyser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "kaggle>=1.7.4.5",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "rich>=14.0.0",
    "ruff>=0.11.10",
    "scipy>=1.15.3",
    "tmdbsimple>=2.9.1",
    "typer>=0.15.3",
    "wordcloud>=1.9.4",
]
